syntax = "proto3";

package grpc;

service DataService{
  rpc GetUsers(GetUserRequest) returns (GetUserResponse) {}
}

message GetUserRequest{
  int64 id = 1;
}

message GetUserResponse{
  User user = 1;
}

message User{
  int64 ID = 1;
  string Name = 2;
  int64 RoleId = 3;
}